--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,7 @@ mark{
 .shadow{
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.55);
 }
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
   .offcanvas {
       width: 250px;
   }
@@ -512,9 +512,51 @@ mark{
     background-size: cover;
     background-position: 70%;
   }
-  .main-content h1{
-    margin-top: -50px !important;
+  .main-content .content{
+    width: 70%;
+
   }
+  .main-content h1{
+    font-size: 1.2em;
+  }
+  .banner-boton{
+    width: 150px;
+    height: 30px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 30px;
+    font-size: .8em;
+    font-family: Inter;
+    font-weight: 700;
+    letter-spacing: 1px;
+    transition: 0.5s ease;
+    cursor: pointer;
+    color: #fff;
+
+  }
+  .testimonyImg{
+    width: 0%;
+    max-height: 0%;
+  }
+  .container-historias{
+
+    max-height: 600px !important;
+
+  }
+  .content-products h1{
+    font-size: 1.5em;
+  }
+  .imagen-cotizacion-cliente-detalle{
+    width: 0% !important;
+  }
+  
+  .calendar {
+
+    width: 95% !important;
+
+  }
+
+
   /* Banner de productos */
   .main-content-products{
     width: 100%;
@@ -844,6 +886,7 @@ mark{
 .hidden {
   display: none;
 }
+
 .address-form {
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -962,7 +1005,7 @@ margin-right: 5px;
 
 }
 .agendar textarea{
-  width: 75%;
+  width: 100%;
   border: 1px solid rgba(19, 38, 68, 0.53);
   border-radius: 8px;
   padding: 1em;
@@ -970,7 +1013,7 @@ margin-right: 5px;
   
 }
 .agendar select{
-  width: 75%;
+  width: 100%;
   margin: auto;
 }
 .submit-button-register{
@@ -1335,5 +1378,4 @@ font-size: 1em ;
   color: #fff;
  
 }
-
 
