--- a/css/styles.css
+++ b/css/styles.css
@@ -1379,3 +1379,13 @@ font-size: 1em ;
  
 }
 
+.notification{
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  padding: 10px 10px;
+}
+.notification p{
+text-transform: capitalize;
+}
